trunk/media/styles/caitlin.css
/* ... */
.sectors-home li{
	display: inline-block;
	height: 26px;
	padding: 13px 20px 5px 40px;
	margin: 10px 0 0 0;
	font-weight: 700;
	font-size: 110%;
	color: #676766;
}
.sectors-home a{
	text-decoration: none;
	font-weight: 700;
	color: #676766;
}
.sectors-home a:hover{
	color: #BF5004;
}

.comingsoon span{
	font-weight: 400;
	font-style: italic;
	font-size: 60%;
}
#sector-housing{
	background: url('../images/sector_icons/housing_med.png') left center no-repeat;
}
#sector-energy{
	background: url('../images/sector_icons/energy_med.png') left center no-repeat;
	width: 124px;
}
#sector-nonprofits{
	background: url('../images/sector_icons/nonprofits_med.png') left center no-repeat;
	width: 124px;
}
#sector-transportation{
	background: url('../images/sector_icons/trans_med.png') left center no-repeat;
	width: 124px;
}
#sector-fin-bailout{
	background:  url('../images/sector_icons/1_med.png') left center no-repeat;
	width: 124px;
}
#sector-health{
	background: url('../images/sector_icons/6_med_gray.png') left center no-repeat;
}

/*------ Sector Carousel Styling ------*/
.carousel-border{
	background: #f5f5f4;
	width: 960px;
	height: 10px;
}
.carousel-bg{
	width: 690px;
	float: left;
	margin-left: 0;
	height: 246px;
	background: #f5f5f4;
	margin-bottom: 30px;
}

.sector_carousel .marquee{
	border-bottom: 1px solid #c3c3c3;
	padding-bottom: 2px;
}
.sector_carousel.carousel-tab{
	height: 235px;
	width: 690px;
	position: relative;
	background: #ffffff;
}

.sector_carousel #imagecontainer{
	width: 420px;
	height: 235px;
	float: left;
}

.sector_carousel #imagecontainer img.feature-image{
	width: 420px;
	height: 235px;
	margin-top: 0;
	
}

.sector_carousel ul.feature_nav{
	position: absolute;
	top: 208px;
	right: 285px;
}

.sector_carousel .feature_nav li{
	display: inline-block;
}
.sector_carousel .feature_content{
	font-size: 95%;
}
.sector_carousel .newsbits{
	width: 200px;
	float: left;
	margin: 20px;
}
.sector_carousel .newsbits h2{
	font-size: 130%;
}


/*------ Sector Updates Styling ------*/

.updates_head { 
	border-top:1px solid #cbcbcb; 
	background-color:#f3f3f4; 
	padding:9px 0 0 9px; 
	border-bottom:1px solid #ffffff; 
	color:#333333; 
	font-size: 14px; 
	background-image:url(/media/images/front_update_head_bg_alt.png); 
	background-repeat:repeat-x;
	height: 22px;
}
#update_headline h4{
	display: inline;
}

h3.sector_updates{
	font-size: 110%;
	color: #636363;
	background-image: none;
	padding-left: 0;
	margin-left: 5px;
	font-weight: normal;
	height: 0;
	margin-bottom: 0;
	padding-top: 0;
	display: inline-block;
	line-height: 0;
}
.updates_head a{
	background: url('../images/rss_icon.png') left center no-repeat;
	display: inline-block;
	width: 12px;
	height: 12px;
	text-indent: -9999em;
}

h4 a {
	color: #154661;
    margin-bottom: 15px;
    text-decoration: none;
}

#update_item { 
	padding:0 10px 0 0; 
	margin:0 0 2px 0;
}

#update_item .readmore { border:1px solid #e6e6e6;  font-size:90%; padding:2px 3px 0 3px; margin:0;  text-align:center;}
#update_item a.readmore { text-decoration:none; }
.update_date { 
	font-size:90%;
	color: #888888;
	font-style: italic;
}

#update_icon { 
	padding: 0 5px 0 0;
	margin: 0; 
	text-align: right;
	display: inline;
}

#update_headline { 
}

/*------ General Page Content Styling ------*/

.page-content li{
	line-height: 1.65;
}

.page-content ul{
	margin-bottom: 15px;
	margin-right: 20px;
}

h5{
	margin-bottom: 15px;
	margin-top: 10px;
}

cite{
	font-size: 80%;
	color: #6a6a6a;
}

/*------ CHARTS ------*/

img.chart {  }
img.center { margin: 0 auto; display:block; }

ul.horizontal { display:inline; width: 100%; float:left; margin-left: 50px;}
ul.horizontal li { float:left; width: 20%; }
ul.horizontal li h6 {text-align:center;}
ul.horizontal li img {margin-left: auto; margin-right: auto; display:block; }
div.full {width: 100%; }
div.charts {font-family: sans-serif; }
div.charts h5 {text-align:center; padding: 0 20px}
div.charts.left {
	float:left; 
	width: 320px;
	padding: 20px 20px 20px 0;
}
div.charts.right {
	float:right; 
	width: 320px;
	padding: 20px 0 20px 20px;
}

/*------ footnotes ------*/
.footnotes { margin-top: 20px}
ol.footnotes { font-size: 0.9em; color: #6a6a6a;}
ol.footnotes li { margin-bottom: 0.8em; line-height: 1.3em;}
a.footnote { font-size: 0.7em; position: relative; top: -0.8em;}
.footnotes p{ font-size: 0.9em; color: #6a6a6a; line-height: 1.3em; }

.attribution { font-size: 0.9em; margin-bottom: 20px; margin-top: 10px; display:block; text-align:left; padding-right:20px;}


/*------ PTED styling ------*/

.display_type, .date_range{
	display: inline-block;
}
.date_range{
	float: right;
	margin-right: 20px;
}
.download_csv{
	float: right;
	margin: 15px 20px 0 0;
}
.table_header{
	width: 400px;
}

/*------ Misc Page Styling ------*/


.mode_alt{
	float: right;
	width: 360px;
}
.left{
	float: left;
	padding-right: 20px;
}
.bio_list, .sub_list_bios, .press-releases{
	list-style-type: none;
	margin-left: 0;
}
.press-releases li{
	margin-bottom: 10px;
}
.bio_list{
	-moz-column-count:2;
	-webkit-column-count: 2;
	-moz-column-gap: 20px
	-webkit-column-gap: 20px
	-moz-column-rule: none;
	-webkit-column-rule: none;
}
.bio_list li{
	display: block;
	margin-bottom: 20px;
}
.bio_list .affil{
	display: block;
	vertical-align: top;
}
.bio_list a{
	font-weight: bold;
}

dl{
	margin-bottom: 20px;
	margin-top: 10px;
}

.subsidyscope-contributors{
	clear: both;
}
.subsidyscope-contributors dd{
	float: left;
	width: 460px;
	margin-bottom: 10px;
}
.subsidyscope-contributors dt{
	width: 200px;
	float: left;
	clear: both;
}

#staff-page h5{
	clear: both;
	margin-top: 20px;
}

blockquote{
	color: ;
}

.program{
	border-bottom: 1px solid #cccccc;
}

/*------ Generic chart styles ------*/

#subsidy-charts tr.header-row td { 
	background-color: #e4e4e4; 
	border-top: 1px solid #a5a5a5; 
	border-bottom: 1px solid #a5a5a5; 
	font-weight: bold;
}
#subsidy-charts tr.header-row td { 
	border-right:none;
}
/* ... */

